--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div id="main-image-icon"></div>
 
-    <content id="boards"></content>
+    <content id="boards">
+        <div id="card-create-new-board">Create a new board...</div>
+    </content>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
     <!-- <script src="/js-cookie/src/js.cookie.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
