--- a/sample-list.html
+++ b/sample-list.html
@@ -16,6 +16,6 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
     <!-- <script src="/js-cookie/src/js.cookie.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    <script src="js/board-button.js"></script>
+    <script src="js/new-list-button.js"></script>
 </body>
 </html>
