Add css and initialization code for new lists

--- a/sample-list.html
+++ b/sample-list.html
@@ -11,6 +11,11 @@
     <div id="main-image-icon"></div>
     <div id="list-title" class="card">Test</div>
     <content id="lists">
+        <div class="list">FRGV
+            <div class="list-sub-div">
+                    <hr> <input>
+            </div>
+        </div>
         <div id="card-create-list" class="card">Add a list...</div>
     </content>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
