Add new class for grow on hover

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="main-image-icon"></div>
 
     <content id="boards">
-        <div id="card-create-new-board">Create a new board...</div>
+        <div id="card-create-new-board" class="grow-on-hover">Create a new board...</div>
     </content>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
     <!-- <script src="/js-cookie/src/js.cookie.js"></script> -->
