--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Not-Trello</title>
 </head>
 <body>
-    <div id="main-image-icon"></div>
+    <div id="main-image-icon">
+        <img src="img/iconmonstr-red-x-mark.png">
+    </div>
 
     <content id="boards">
         <div id="card-create-new-board" class="grow-on-hover">Create a new board...</div>
     </content>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
-    <!-- <script src="/js-cookie/src/js.cookie.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script src="js/board-button.js"></script>
 </body>
