--- a/sample-list.html
+++ b/sample-list.html
@@ -8,18 +8,14 @@
     <title>Not-Trello</title>
 </head>
 <body>
-    <div id="main-image-icon"></div>
-    <div id="list-title" class="card">Test</div>
+    <div id="main-image-icon">
+        <a href="index.html"><img src="img/iconmonstr-home.png"></a>
+    </div>
+    
+    <div id="list-title" class="card"></div>
     <content id="lists">
-        <!-- <div class="list">FRGV
-            <div class="list-sub-div">
-                    <hr> <input>
-            </div>
-        </div> -->
         <div id="card-create-list" class="card">Add a list...</div>
     </content>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
-    <!-- <script src="/js-cookie/src/js.cookie.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script src="js/new-list-button.js"></script>
 </body>
